@@ -5,6 +5,7 @@ import lombok.Data;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -19,7 +20,7 @@ public final class User {
 
     private Team team;
 
-    private List<String> roles = List.of("ROLE_USER"); // Pour spring Security
+    private List<String> roles = Collections.singletonList("ROLE_USER"); // Pour spring Security
 
     public User(String mail, String password, String pseudo) {
         this.mail = mail;
